Fix-ish recent test alignment

--- a/src/SimplyTestable/WebClientBundle/Resources/public/css/app.css
+++ b/src/SimplyTestable/WebClientBundle/Resources/public/css/app.css
@@ -869,3 +869,7 @@ body.account div.controls-disabled {
 .alert-from-view .icon-warning-sign {
     margin-right:0;
 }
+
+#recent-site-tests .span4 {
+    width:31%;
+}
